fix: UI flickering

--- a/src/client/style.css
+++ b/src/client/style.css
@@ -36,7 +36,7 @@ a:hover, a:focus {
 
 table {
   width: 100%;
-  max-width: 320px;
+  max-width: 355px;
   border-collapse: collapse;
 }
 
@@ -95,7 +95,7 @@ td:nth-child(2), td:nth-child(3) {
   color: $output-color;
   border-left: 1px solid #EEE;
   position: absolute;
-  left: 360px;
+  left: 375px;
   right: 0;
   top: 0;
   bottom: 0;
@@ -103,7 +103,7 @@ td:nth-child(2), td:nth-child(3) {
 
 footer {
   position: absolute;
-  bottom: 0;
+  bottom: 30px;
 }
 
 footer a {
